--- a/InitialAnalysis.Rmd
+++ b/InitialAnalysis.Rmd
@@ -1,20 +1,36 @@
 ---
 title: "R Notebook"
-output: html_notebook
+output:
+  pdf_document: default
+  html_notebook: default
 ---
 
+# Allocation methods
 Let us start by defining functions for each allocation method
+
+## Allocation methods that don't take into account covariates
+
+### Random and Restricted randomisation
 
 ```{r}
 
 ## Allocation functions that don't take into account covariates
 
+# Simple random selection
 randomAllocation <- function(n, T){
   results = sample(1:T, n, replace = TRUE)
   return(results)
 }
 
-biasedCoinAllocation <- function(n, T){
+# Simple allocation based off Neyman Allocation
+neymanKnown <- function(n, T, Results, p){
+  Allocation = sample(T, n, replace = TRUE, prob = p)
+  return(Allocation)
+}
+
+# Efron biased coin design with alpha < 0.5 (alpha = 0.5 is simple random selection)
+# Only works when T = 2
+biasedCoinAllocation <- function(n, alpha){
   Allocation = rep(0,n) # biased coin design
   Si = rep(0,n)
   q = rep(0.5,n)
@@ -23,8 +39,8 @@ biasedCoinAllocation <- function(n, T){
     if(i < n){
       Si[i+1] = sum(Allocation[1:i])/(i)
       if(Si[i+1] == 0){q[i+1] = 0.5}
-      if(Si[i+1] < 0){q[i+1] = 2/3}
-      if(Si[i+1] > 0){q[i+1] = 1/3}
+      if(Si[i+1] < 0){q[i+1] = 1- alpha}
+      if(Si[i+1] > 0){q[i+1] = alpha}
     }
   }
   Allocation = (Allocation + 3)/2
@@ -32,6 +48,13 @@ biasedCoinAllocation <- function(n, T){
   return(CombinedResult)
 }
 
+
+```
+
+## Response adaptive randomisation
+
+### Coin based designs
+```{r}
 doublyBiasedCoinAllocation <- function(n, n0, T, Results){
   Allocation = rep(0,n) 
   q = rep(0.5,n) 
@@ -48,23 +71,57 @@ doublyBiasedCoinAllocation <- function(n, n0, T, Results){
   }
 }
 
+```
+
+
+### Turn based and Gittins index
+```{r}
+# Play the Winner: If it is a success we continue with the same treatment otherwise we randomly select from all treatments
 playTheWinner <- function(n, T, Results){
   Allocation = rep(0,n)
-  Allocation[1] = sample(T,1)
-  for (i in 2:n) {
-    Allocation[i] = ifelse(Results[i,Allocation[i-1]]==1, Allocation[i-1], sample(T,1))
+  winner = 0
+  for (i in 1:T) {
+    if (winner == 1) {
+      Allocation[i] = Allocation[i-1]
+    } else{
+      Allocation[i] = sample(T,1)
+    }
+    Winner = Results[i, Allocation[i]]
   }
   return(Allocation)
 }
 
-playTheWinnerRandomised <- function(n, T, Results){
+# Play the winner randomised: Start with number of successes of each treatment (wA. wB). pA = wA / (wA + wB)
+# Increment wA if treatment A succeeds or treatment B fails
+# Similarly increment wB if treatment B succeeds or treatment A fails
+# Two treatments only
+playTheWinnerRandomised_2T <- function(n, Results, wA, wB){
   Allocation = rep(0,n)
+  q = rep(0,n)
+  for (i in 1:n) {
+    q[i] = wA/(wA + wB)
+    Allocation[i] = 2*(runif(1)<= q[i]) - 1
+    Outcome = Results[i, Allocation[i]]
+    if(( Outcome == 1 && Allocation[i] == 1) || (Outcome == 0 && Allocation[i] == 2) ){
+      wA = wA + 1
+    } else{ wB = wB + 1}
+  }
+  CombinedResult = data.frame(Allocation = Allocation, q = q)
+  return(CombinedResult)
 }
 
-neymanKnown <- function(n, T, Results, p){
-  Allocation = sample(T, n, replace = TRUE, prob = p)
-  return(Allocation)
+GittinsIndex <- function(n, Results, wA, wB){
+  Allocation = rep(0,n)
+  G = rep(0,n)
+  
+  CombinedResult = data.frame(Allocation = Allocation, GittinsIndex =  G)
+  return(CombinedResult)  
 }
+```
+
+### Sequential estimation techniques
+```{r}
+
 
 neymanEstimated_binary <- function(n, n0, Results){
   Allocation = rep(0,n)
@@ -89,7 +146,7 @@ neymanEstimated_binary <- function(n, n0, Results){
   return(Allocation)
 }
 
-RSHIR_binary <- function(n, n0, Results){
+RSIHR_binary <- function(n, n0, Results){
   Allocation = rep(0,n)
   T = 2
   #First initialise by assigning no to each treatment
@@ -154,6 +211,11 @@ ResponseAdaptive_Binary_2 <- function(n, n0, Results){
 }
 ```
 
+
+
+## Allocation strategies that take into account covariates
+
+### Sequential estimation
 ```{r}
 
 ## Allocation functions that take into account covariates
@@ -169,10 +231,12 @@ CARA3 <- function(n, n0, T, Z, Results){
   
 }
 
-
-
 ```
 
+
+
+
+# Simulation
 setting up the problem
 
 ```{r}
@@ -202,18 +266,19 @@ for (i in 1:T) {
 Allocation_random = randomAllocation(n, T)
   
 # Biased Coin
-Allocation_biasedCoin = biasedCoinAllocation(n, T)
+Allocation_biasedCoin = biasedCoinAllocation(n, 1/3)
 
 ```
 
 ```{r}
 # Play the winner
 Allocation_playTheWinner = playTheWinner(n, T, Results)
+Allocation_playTheWinner_Randomised = playTheWinnerRandomised_2T(n, Results, 1, 1)
 
 # Neyman Allocations
 Allocation_neyamn_known = neymanKnown(n, T, Results, SuccessProbs)
 Allocation_neyamn_estimated = neymanEstimated_binary(n, n0, Results)
-Allocation_RSHIR_binary = RSHIR_binary(n, n0, Results)
+Allocation_RSHIR_binary = RSIHR_binary(n, n0, Results)
 
 Allocation_ResponseAdaptive_Binary_1 = ResponseAdaptive_Binary_1(n, n0, Results)
 Allocation_ResponseAdaptive_Binary_2 = ResponseAdaptive_Binary_2(n, n0, Results)
